--- a/projects/css.css
+++ b/projects/css.css
@@ -5,8 +5,10 @@ body{
 width:100%;
 height:100%;
 position:relative;
+color:white;
 }
 
+.not{color:yellow; background-color: rgba(0,0,0,0.4);font-size: 30px; font-family:cursive;}
 .about{
 width:100%;
 height:300px;
@@ -53,6 +55,7 @@ border: 2px black solid;
 text-align: center;
 display:flex;
 align-items:center;
+font-weight:bold;
 }
 
 .num1{
