--- a/cs-160/css.css
+++ b/cs-160/css.css
@@ -8,7 +8,13 @@ position:relative;
 color:white;
 }
 
-.not{color:yellow; background-color: rgba(0,0,0,0.4);font-size: 30px; font-family:cursive;}
+.not{color:yellow;
+  background-color: rgba(0,0,0,0.4);
+  font-size: 30px;
+  text-decoration:line-through;
+  font-family:cursive;
+
+}
 .about{
 width:100%;
 height:300px;
